tests/snapshot/error/source_locations/expression/yield_star/next_result_get_named_property_done_throws.exp
Error: 
  ┌ source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:8:19
  |
8 |             throw new Error();
  |                   ^
Stack trace:
  at get done (source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:8:19)
  at generator (source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:20:3)
  at next (<native>)
  at <global> (source_locations/expression/yield_star/next_result_get_named_property_done_throws.js:24:1)